project (circuitSim)
cmake_minimum_required(VERSION 3.2)

SET(GCC_EXTRA_COMPILE_FLAGS "-g -std=c++11")
SET(GCC_EXTRA_LINK_FLAGS    "-g -std=c++11")

SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_EXTRA_COMPILE_FLAGS}" )
SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_EXTRA_LINK_FLAGS}" )

set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib )
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib )

FIND_PACKAGE(PythonInterp)
FIND_PACKAGE(PythonLibs)

include_directories (AFTER include)

subdirs(src)

